@startuml


skinparam linetype ortho
skinparam dpi 150
skinparam defaultTextAlignment center

class ConfigLoader {
  - properties: Properties
  + getInstance(): ConfigLoader
  + reload(): void
  + getIntProperty(String key, int defaultValue): int
  + getStringProperty(String key, String defaultValue): String
  + getBooleanProperty(String key, boolean defaultValue): boolean
}

class ConfigUpdater {
  - properties: Properties
  + updateProperty(String key, String value): void
  + saveConfig(): void
}

class ConfigModifyTable {
  - redDurationField: TextField
  - greenDurationField: TextField
  - yellowDurationField: TextField
  - configUpdater: ConfigUpdater
  + getGridPane(): GridPane
  + createConfirmButton(): Button
  + showAlert(): void
}

ConfigModifyTable --> ConfigUpdater : 更新参数
ConfigUpdater --> ConfigLoader : reload配置
' <<singleton>> ConfigLoader  -- 标记单例（注释）

@enduml
